--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   http: ^0.13.3
   json_annotation: ^3.1.1
   pretty_json: ^2.0.0
+  path_provider: ^2.0.1
 
 dev_dependencies:
   flutter_test:
@@ -31,8 +32,7 @@ flutter:
 
   uses-material-design: true
 
-  # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/
+    - assets/res/
 
