--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   json_annotation: ^3.1.1
   pretty_json: ^2.0.0
   path_provider: ^2.0.1
+  cached_network_image: ^3.0.0
 
 dev_dependencies:
   flutter_test:
