--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -6,7 +6,7 @@ name: Flutter CI
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
   push:
-    branches: [ main , develop ]
+    branches: [ main ]
   pull_request:
     branches: [ main , develop ]
 
@@ -40,6 +40,7 @@ jobs:
     
     # Statically analyze the Dart code for any errors.
     - run: flutter analyze .
+    
     
     # Run widget tests for our flutter project.
     - run: flutter test
