--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,7 @@ flutter:
 
   uses-material-design: true
 
-  assets:
-    - assets/
-    - assets/res/
+#  assets:
+#    - assets/
+#    - assets/res/
 
