--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,7 +21,7 @@ dependencies:
   cached_network_image: ^3.0.0
   hive: ^2.0.4
   hive_flutter: ^1.0.0
-  marquee: ^2.1.0
+  flutter_staggered_grid_view: ^0.4.0
 
 dev_dependencies:
   flutter_test:
