--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,7 +22,7 @@ dependencies:
   hive: ^2.0.4
   hive_flutter: ^1.0.0
   flutter_staggered_grid_view: ^0.4.0
-
+  auto_size_text: ^2.1.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
