--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -1,14 +1,12 @@
 # This is a basic workflow to help you get started with Actions
 
-name: Flutter CI
+name: Flutter app-release.apk
 
 # Controls when the action will run. 
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
   push:
     branches: [ main ]
-  pull_request:
-    branches: [ main , develop ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -54,36 +52,4 @@ jobs:
           name: release-apk
           path: build/app/outputs/apk/release/app-release.apk
     
-    # Setup Java environment in order to build the Android app.
-      - uses: actions/checkout@v1
-      - uses: actions/setup-java@v1
-        with:
-          java-version: '12.x'
-
-      # Setup the flutter environment.
-      - uses: subosito/flutter-action@v1
-        with:
-          channel: 'beta' # 'dev', 'alpha', default to: 'stable'
-          flutter-version: '2.2.x' # you can also specify exact version of flutter
-
-      # Get flutter dependencies.
-      - run: flutter pub get
-
-      # Check for any formatting issues in the code.
-      - run: flutter format --set-exit-if-changed .
-
-      # Statically analyze the Dart code for any errors.
-      - run: flutter analyze .
-
-
-      # Run widget tests for our flutter project.
-      - run: flutter test
-
-      # Build apk.
-      - run: flutter build apk
-
-      # Upload generated apk to the artifacts.
-      - uses: actions/upload-artifact@v1
-        with:
-          name: release-apk
-          path: build/app/outputs/apk/release/app-release.apk
+    
