--- a/.github/workflows/flutter_app_release.yml
+++ b/.github/workflows/flutter_app_release.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: Flutter app-release.apk
+name: Flutter - apk builder
 
 # Controls when the action will run. 
 on:
