--- a/.github/workflows/flutter_app_release.yml
+++ b/.github/workflows/flutter_app_release.yml
@@ -44,12 +44,27 @@ jobs:
       - run: flutter test
 
       # Build apk.
-      - run: flutter build apk
-
+#       - run: flutter build apk/
+      
+            
+      - uses: r0adkll/sign-android-release@v1
+        name: Sign app APK
+        # ID used to access action output
+        id: sign_app
+        with:
+          releaseDirectory: build/app/outputs/apk/release/
+          signingKeyBase64: ${{ secrets.UPLOAD_KEYSTORE_BASE64 }}
+          alias: ${{ secrets.KEY_ALIAS }}
+          keyStorePassword: ${{ secrets.KEYSTORE_PASSWORD }}
+          keyPassword: ${{ secrets.KEYSTORE_PASSWORD }}
+        env:
+          # override default build-tools version (29.0.3) -- optional
+          BUILD_TOOLS_VERSION: "30.0.2"
+      
       # Upload generated apk to the artifacts.
       - uses: actions/upload-artifact@v1
         with:
           name: release-apk
-          path: build/app/outputs/apk/release/app-release.apk
+          path: ${{steps.sign_app.outputs.signedReleaseFile}}
     
     
