--- a/.github/workflows/flutter_app_release.yml
+++ b/.github/workflows/flutter_app_release.yml
@@ -60,4 +60,4 @@ jobs:
       - uses: actions/upload-artifact@v1
         with:
           name: release-apk
-          path: build/app/outputs/apk/release/*.apk
+          path: Built build/app/outputs/flutter-apk/
