--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,21 +21,29 @@ dependencies:
   cached_network_image: ^3.0.0
   hive: ^2.0.4
   hive_flutter: ^1.0.0
-  flutter_staggered_grid_view: ^0.4.0
   auto_size_text: ^2.1.0
+
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
   build_runner:
-  hive_generator: ^1.1.0
+  hive_generator:
+  flutter_launcher_icons:
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: false
+  image_path: "assets/icons/icon.png"
+
 
 # The following section is specific to Flutter.
 flutter:
 
   uses-material-design: true
 
-#  assets:
-#    - assets/
-#    - assets/res/
+  assets:
+    - assets/
+    - assets/icons/
 
