--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,9 @@ dependencies:
   auto_size_text: ^2.1.0
   font_awesome_flutter: ^9.0.0
   package_info: ^2.0.0
+  permission_handler: ^8.0.0+2
+  flutter_archive: ^4.0.1
+  filesystem_picker: ^1.0.4
 
 dev_dependencies:
   flutter_test:
